# parallax

./: .gitignore  Cargo.toml  README.md
_docs/: Design.md
actor/: Cargo.toml
actor/src/: lib.rs
azure-actor/: Cargo.toml
azure-actor/src/: lib.rs  listener.rs  sender.rs  tests.rs
db-actor/: Cargo.toml
db-actor/src/: error.rs  lib.rs  sqlite.rs  tests.rs
docs/: Why_Digital_Twin_Fits.md
http-actor/: Cargo.toml
http-actor/src/: lib.rs
http-serv-actor/: Cargo.toml
http-serv-actor/src/: lib.rs
kernel/: Cargo.toml  README.md
kernel/pki-server/own/: cert.der
kernel/pki-server/private/: private.pem
kernel/src/: actors.rs  ecs.rs  elements.rs  error.rs  gauges.rs  lib.rs  main.rs  servers.rs  vis2d.rs
kernel/src/actors/: servers.rs  tags.rs  workers.rs
kernel/src/actors/servers/: azure.rs  http.rs  opcua.rs  ssh.rs
kernel/src/actors/servers/azure/: tests.rs
kernel/src/actors/servers/azure/sb-emulator/: .env  config.json  docker-compose.yaml  example.http  send_message.py
kernel/src/actors/servers/http/: tests.rs
kernel/src/actors/servers/opcua/: data.rs  macros.rs  server.confg  tests.rs
kernel/src/actors/servers/ssh/: handler.rs  tests.rs
kernel/src/actors/workers/: db.rs  periodic.rs  process.rs
kernel/src/actors/workers/db/: tests.rs
kernel/src/actors/workers/process/: tests.rs
kernel/src/gauges/: stopwatch.rs
kernel/src/servers/: azure.rs  http.rs  opcua.rs  ssh.rs
kernel/src/servers/azure/: amqp.rs  client_test.py  tests.rs
kernel/src/servers/azure/amqp/: extract.rs  frames.rs
kernel/src/servers/azure/sb-emulator/: client_test.py  config.json
kernel/src/servers/http/: tests.rs
kernel/src/servers/opcua/: data.rs  tests.rs
kernel/src/servers/ssh/: handler.rs  tests.rs
kernel/src/vis2d/: pos2d.rs
local-azure-sb/sb-emulator/: .env  client_test.py  example.http
opcua-serv-actor/: Cargo.toml
opcua-serv-actor/src/: data.rs  lib.rs  macros.rs
process-actor/: Cargo.toml
process-actor/src/: lib.rs
ssh-actor/: Cargo.toml
ssh-actor/src/: error.rs  handler.rs  lib.rs  tests.rs
ssh-serv-actor/: Cargo.toml
ssh-serv-actor/src/: lib.rs  tests.rs
utils/: Cargo.toml
utils/src/: lib.rs
