[workspace]
members = [
    "actor",
    "http-serv-actor",
    "ssh-serv-actor",
    "utils",
    "db-actor",
    "process-actor", "opcua-serv-actor", "azure-actor",
]

resolver = "3"

[workspace.dependencies]
actor = { path = "actor" }
utils = { path = "utils" }
actix = "0.13.5"
actix-web = "4.4"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.8"
