[package]
name = "db-actor"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono"] }
actor = { workspace = true }
utils = { workspace = true }
log = { workspace = true }
actix = { workspace = true }
tokio = { workspace = true }