[package]
name = "http-serv-actor"
version = "0.1.0"
edition = "2024"
publish = false


[dependencies]
actor = { workspace = true }
utils = { workspace = true }
actix = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }