[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
description = "Industrial Digital Twin & Virtual Commissioning Framework"
license = "Apache-2.0"
repository = "https://github.com/besok/parallax.git"
homepage = "https://github.com/besok/parallax.git"
documentation = "https://docs.rs/parallax"
keywords = ["digital-twin", "simulation", "IoT", "rust", "data-analytics"]
categories = ["simulation", "data-structures", "network-programming"]
readme = "README.md"
publish = false

[dependencies]
axum = "0.6"
tokio = "1.47.1"
log = "0.4"
env_logger = "0.10"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
chrono = "0.4"
russh = "0.40.2"
russh-keys = "0.40.1"
hyper = "0.14"
async-trait = "0.1.88"
opcua = { version = "0.12", features = ["client", "server"] }

azure_messaging_servicebus = "0.21.0"
azure_core = "0.21.0"
base64 = "0.22.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono"] }
