[package]
name = "opcua-serv-actor"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
opcua = { version = "0.12", features = ["client", "server"] }
actor = { workspace = true }
utils = { workspace = true }
actix = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
